added draft text to ecological questions section of results mss

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -84,21 +84,21 @@
 % Current = 580 words
     
     \paragraph{}
-    In many biological systems, interactions between various elements affect each other's performance and together determine the dynamics of the whole system. In order to understand how system dynamics behave when many elements are involved, such complex systems can be represented as networks where the elements are nodes and linked by interactions. These nodes can take on a wide array of identities, including cells, individuals, populations or species. Likewise, interactions or links can operate via many different mechanisms and have a wide range of effects on the nodes. Fundamentally, biological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these systems \parencite{Dunne2002}.
+    In many biological systems, interactions between various elements affect each other's performance and together determine the dynamics of the whole system. In order to understand how system dynamics behave when many elements are involved, such complex systems can be represented as networks where the elements are nodes and linked by interactions. These nodes can take on a wide array of identities, including cells, individuals, populations or species [REFS]. Likewise, interactions or links can operate via many different mechanisms and have a wide range of effects on the nodes [REFS. Fundamentally, biological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these systems \parencite{Dunne2002} [MORE REFS].
 
     \paragraph{}
     %Need a section here describing horizontal / single-trophic systems and what some of the difficulties are for these. 
-    Network theory has been widely applied to investigate the structure of biological systems such as food webs and other types of multi-level ecological interaction networks. There is now a rich body of work describing the characteristics of food webs, plant-pollinator networks, and host-parasite interactions. Horizontal networks however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been largely neglected \parencite{Ellison2019}. These elements and their interactions have been found to alter the structure, stability and diversity-functioning relationships of the whole multi-level system \parencite{Hammill2015, Giling2019, Zhao2019, Miele2019}, which makes integrating horizontal and vertical networks a key challenge in improving our understanding of system dynamics and persistence \parencite{Godoy2018c}.
+    Network theory has been widely applied to investigate the structure of biological systems such as food webs and other types of multi-level ecological interaction networks. There is now a rich body of work describing the characteristics of food webs, plant-pollinator networks, and host-parasite interactions [REFS]. Horizontal networks however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been largely neglected \parencite{Ellison2019}. These elements and their interactions have been found to alter the structure, stability and diversity-functioning relationships of the whole multi-level system \parencite{Hammill2015, Giling2019, Zhao2019, Miele2019}, which makes integrating horizontal and vertical networks a key challenge in improving our understanding of system dynamics and persistence \parencite{Godoy2018c}.
 
     \paragraph{} 
-    In many horizontal systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. One strategy is to look at associations between the nodes: nodes which are often found together are assumed to interact more strongly than nodes which rarely co-occur. This approach benefits from a wide range of packages available in R, requires fairly simple data (presence/absence of the nodes) and can be used to deduce associations between large numbers of nodes. An important drawback remains: association networks cannot always distinguish between the multiple confounding factors which lead to co-occurrence, and in ecological communities little evidence supports their use as a proxy for interactions \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
+    In many horizontal systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. One strategy is to look at associations between the nodes: nodes which are often found together are assumed to interact more strongly than nodes which rarely co-occur [REF]. This approach benefits from a wide range of packages available in R, requires fairly simple data (presence/absence of the nodes) and can be used to deduce associations between large numbers of nodes [REFS?]. An important drawback remains: association networks cannot always distinguish between the multiple confounding factors which lead to co-occurrence, and in ecological communities little evidence supports their use as a proxy for interactions \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
 
     \paragraph{}
-    An alternative approach is to directly quantify the effects of interacting nodes on the node of interest by evaluating its performance in the absence and presence of potential interaction partners. Performance can be any variable of interest which affects the dynamics of the system, for example population growth. The resulting interactions are phenomenological and thus not dependant on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system. Such methods can quickly become data intensive and computationally complex, however, as the number of nodes $S$ increases and the number of potential direct interactions subsequently increases by $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different elements is typically skewed, with a few nodes making up the majority of abundances and a large number of nodes remaining rare \parencite{}. Given that data collection is limited in time and scope, interactions with rarer nodes especially may not be realised simply by chance, excluding them from analysis regardless of the role they might play. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method which is flexible to both a high number of nodes, and potential gaps in our records of interactions. 
+    An alternative approach is to directly quantify the effects of interacting nodes on the node of interest by evaluating its performance in the absence and presence of potential interaction partners [REF]. Performance can be any variable of interest which affects the dynamics of the system, for example population growth. The resulting interactions are phenomenological and thus not dependant on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system [REF]. Such methods can quickly become data intensive and computationally complex, however, as the number of nodes $S$ increases and the number of potential direct interactions subsequently increases by $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different elements is typically skewed, with a few nodes making up the majority of abundances and a large number of nodes remaining rare \parencite{} [REPHRASE]. Given that data collection is limited in time and scope, interactions with rarer nodes especially may not be realised simply by chance, excluding them from analysis regardless of the role they might play. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method which is flexible to both a high number of nodes, and potential gaps in our records of interactions. 
 
 
     \paragraph{} % I'm not sur this paragraph will be necessary ... but it will need a little bit more work if I include it.
-    We present a general framework to estimate interactions in highly diverse systems using Bayesian parameter estimation methods which are flexible to greater model complexity. We specify a multi-tiered model which allows us to estimate both realised and unrealised interactions. Using annual wildflower community data in Western Australia consisting of 22 focal species and up to 52 neighbouring species, we illustrate how this novel framework can be applied by couching the resulting interactions into established models of population dynamics. This allows us to account for other demographic processes affecting species performance, as well as translate interaction effects on the measured variable into effects on another variable of interest. We show how the resulting interaction matrices differ from an association network on the same data, and suggest potential applications in species management, xxx and yyyy  that make use of the rich information provided by species interaction networks.
+    We present a general framework to estimate interactions in highly diverse systems using Bayesian parameter estimation methods which are flexible to greater model complexity. We specify a multi-tiered model which allows us to estimate both realised and unrealised interactions, the latter being conditioned on the former [CORRECT LANGUAGE?]. Using annual wildflower community data in Western Australia consisting of 22 focal species and up to 52 neighbouring species, we illustrate how this novel framework can be applied by couching the resulting interactions into established models of population dynamics. This allows us to account for other demographic processes affecting species performance, as well as translate interaction effects on the measured variable into effects on another variable of interest. We show how the resulting interaction matrices differ from an association network on the same data, and suggest potential applications in species management, xxx and yyyy  that make use of the rich information provided by species interaction networks.
 
     %Interactions between species can affect growth rates and population abundances, for example as a predator eats a prey or two plants compete for resources. Together, interactions between many species influence the dynamics of the whole community in ways which can determine patterns of species richness and abundance. In order to understand how community dynamics behave when many species are involved, ecologists can represent communities as networks \parencite{Pimm1978} where species are nodes and linked by interactions. This approach provides a broad view of how multiple species relate to one another within a community \parencite{Kefi2015}. As a result, ecological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these communities \parencite{Dunne2002}. 
 
@@ -119,7 +119,7 @@
 
     % 1 or 2 paragraphs explaining what we did (the 'method') applied to the data 
     \paragraph{}
-        To estimate pairwise interactions in diverse, horizontal systems such as those occurring between plant species in ecological communities, we developed a joint modeling framework capable of estimating both realised and unrealised interactions from empirical observational data of individual component performance in the absence and presence of neighbours. Realised interactions are those which can be directly measured from the collected data, for example as two plant species are observed to co-occur, their performance is evaluated in each other's presence and the effect of the interaction can thus be directly quantified from the observed data. To do so, the performance of an element - a species, population or any chosen set of replicated individuals - is regressed against the abundance and identity of it's neighbouring elements in a neighbour-density dependant model (NDDM).  Increases or decreases in an overall elements' performance can thus be attributed to neighbouring elements/species which were observed to co-occur. Key aspects of the resulting interaction matrix is that these interactions can be competitive or facilitative, non-symmetrical (the effect of element $i$ on $j$ does not necessarily match the effect of element $j$ on $i$) and include intraspecific effects (the effect of element $i$ on itself). Another versatile feature of this framework is that the shape of the relationship between performance and neighbour density can be easily modified to suit the system in question (linear, exponential, rectangular hyperbolic) though it should be carefully verified before implementation. [Maybe move this sentence]
+        To estimate pairwise interactions in diverse, horizontal systems such as those occurring between plant species in ecological communities, we developed a joint modeling framework capable of estimating both realised and unrealised interactions from empirical observational data of individual component performance in the absence and presence of neighbours. Realised interactions are those which can be directly measured from the collected data, for example as two plant species are observed to co-occur, their performance is evaluated in each other's presence and the effect of the interaction can thus be directly quantified from the observed data. To do so, the performance of an element - a species, population or any chosen set of replicated individuals - is regressed against the abundance and identity of it's neighbouring elements in a neighbour-density dependant model (NDDM).  Increases or decreases in an overall elements' performance can thus be attributed to neighbouring elements/species which were observed to co-occur. Key aspects of the resulting interaction matrix is that these interactions can be competitive or facilitative, non-symmetrical (the effect of element $i$ on $j$ does not necessarily match the effect of element $j$ on $i$) and include intraspecific effects (the effect of element $i$ on itself). Another versatile feature of this framework is that the shape of the relationship between performance and neighbour density can be easily modified to suit the system in question (e.g. linear, exponential, rectangular hyperbolic) though it should be carefully verified before implementation. 
 
     \paragraph{}
         Unrealised interactions on the other hand are those which cannot be directly measured from the collected data. As is common in ecological communities, rare elements may not be observed to co-occur with many neighbours, because data sampling is limited in space and time and rare species are less likely to be found. These rarer species may still, however, potentially interact with many of the other species in the system if given the opportunity to do so. Rather than assigning a 0 value to these unknown interactions, we used the previously quantified realised interactions from the NDDM to estimate those unrealised interactions. To do so, we describe a model which assumes that unrealised interactions can be simplified such that elements typically have a singular impact on and a singular response to neighbours independant of neighbour identity (response and impact model, or RIM). An unrealised interaction is therefore the product of two elements' impact and response parameters. Impact and response are calculated from the realised interactions provided by the NDDM and their estimation contributes directly to the overall joint model log-likelihood. Note that the NDDM estimates a unique parameter for each realised interaction independantly of each elements's effects on other neighbours, whilst the RIM applies only to those unrealised interactions. 
@@ -167,14 +167,26 @@
 
     \paragraph{}
      For our case study, the resulting interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values (Figure \ref{fig:netwks}. A \& B). Though competition was the dominant interaction type,  35\% of all focal x neighbour rescaled interactions were facilitative, as were 26 \% of all focal x focal interactions (averages across all network samples). As a result, 40\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. 
-    }
-
-
-    Furthermore, the elements of the diagonal (the effect of a component on itself) were able to be estimated, which can allow us to quantify how much a species regulates it's own performance. For 12 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species. Together, these features make the resulting interaction matrix qualitatively different to association networks, which are a common alternative to inferring interactions in diverse systems (Figure \ref{fig:netwks}. C). 
-
+     Furthermore, the elements of the diagonal (the effect of an element on itself) were able to be estimated, which can allow us to quantify how much a species regulates it's own performance. For 12 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species. Together, these features make the resulting interaction matrix qualitatively different to association networks, which are a common alternative to inferring interactions in diverse systems (Figure \ref{fig:netwks}. C). 
 
     \paragraph{}
-    On average, an individual of a different species decreased a focal individual's growth rate by X\% (+- give min and max), wheras an individual of the same species decreased a focal individual's growth rate by X\% (+- give min and max). Overall, 85\% of all wildlfower species across all network samples were found to compete with themselves and therefore regulate their own population abundance, though the strength of per-capita intraspecific interactions was not correlated to abundance (Figure \ref{fig:aii_abund}. Figure further \ref{fig:species} illustrates how the use of per-capita interaction strengths can allow us to draw conclusions about how different species integrate into and affect other elements of the system.  
+    [FLOATING PARAGRAPH, EDIT/DELETE/MOVE] On average, an individual of a different species decreased a focal individual's growth rate by X\% (+- give min and max), wheras an individual of the same species decreased a focal individual's growth rate by X\% (+- give min and max). Overall, 85\% of all wildlfower species across all network samples were found to compete with themselves and therefore regulate their own population abundance [REPHRASE - self-facilitation may also regulate pop abundance!], though the strength of per-capita intraspecific interactions was not correlated to abundance (Figure \ref{fig:aii_abund}. Figure further \ref{fig:species} illustrates how the use of per-capita interaction strengths can allow us to draw conclusions about how different species integrate into and affect other elements of the system. 
+
+    \paragraph{}
+    We now illustrate potential uses of this framework by examining ecological questions important to species management and how the interaction matrix derived from our case study data may help us better understand the system in question. 
+    We use three ecological questions to illustrate some of the ways in which our results may be useful to empirical and applied ecologists, in particular those interested in...
+ 
+    \subsubsection*{Do abundant natives under-regulate their population density compared to rarer natives?}
+    One hypothesis as to why certain plant species are more abundant than others is that they tend to compete with themselves less strongly. Hypothetically, this relieving of intraspecific competition pressure allows them to reach much higher abundances than species which strongly compete with themselves. In Figure \ref{fig:species} A., we plot the strength of per-capita intraspecific interactions against the log abundance of a species in the field. Intraspecific interactions are at their weakest when close to $0$, values above indicate competition and values below indicate self-facilitation. The two most abundant native species \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) highlighted in purple fall very close to the median intraspecific interaction strength (vertical dashed line). This suggests that \textit{V. rosea} and \textit{P. canescens} do not reach high abundances through an under-regulation of their population density but by through other means (e.g. access to a larger environmental niche space). 
+
+
+    \subsubsection*{Which species may be taking on keystone roles in the system?}
+    Keystone species are often not particularly abundant but have strong effects on the dynamics of the whole ecosystem, for example top predators in food chains. The keystone species concept is useful in helping determine species of particular importance for the safeguarding of a whole system. The removal or extinction of a keystone species is though to ... Though determining which species truly serve keystone roles is a lengthy and involved process, we can identify potential candidates by plotting a species' out strength against it's log abundance. Out-strength refers to the net sum of per-capita interaction strenths on other species. A high positive out-strength indicates that this species has overall strong competitive effects on the population dynamics of other species in the system, whereas a negative out-strength indicates it;s overall effect is facilitative. Species with an out-strength close to 0 either have very weak interaction effects on other species in the systems, or have evenly matched competitive and facilitative effects which cancel each other out (though the latter was not found in our system). Figure \ref{fig:species} B. highlights three native species in green which may be potential keystone species due to having strongly competitive or facilitative effects on the rest of the community overall, despite rather low abundances: \textit{Trachymene ornata} (TROR), \textit{Haloragis odontocarpa} (HAOD) and \textit{Gilberta tenuifolia} (GITE). 
+
+
+    \subsubsection*{Though exotic species are typically thought to compete with natives, there are also reports of facilitative exotics. Is this the case in our system?}
+    Exotic species may have a wide range of effects on native species, both competitive and facilitative. By defining per-capita interaction strengths between species in a system, we can determine which exotics are harmful or beneficial to natives. Figure \ref{fig:species} plots the sum of a species competitive effects on neighbours against the sum of it's facilitative effects on neighbours. Exotic species are identified in red. \textit{Hypochaeris glabra} (HYPO) and \textit{Arctotheca calendula} (ARCA) both have a lower-than-median facilitative effect on neighbours but a higher-than-median competitive effect, these two species fit the narrative of potentially harmful exotic species which compete with natives. \textit{Pentameris aroides} (PEAI) on the other hand has a slightly lower-than-median competitive effect and higher-than-median facilitative effect: it competes more weakly and facilitates more strongly than the median species in the system. In this instance, \textit{P. aroides} is an exotic species which nevertheless facilitates some native species.
+
 
     \paragraph{}
     Got into ecological questions here (and EDIT/REMOVE previous paragraph)
