added draft paragraph from Ch4 on network approach

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -299,6 +299,8 @@
 
         %Likewise, networks also provide several ways of measuring and describing species roles in their respective communities \parencite{Cirtwill2018a} for example through the use of structural motifs, unique patterns of interacting species which together make up the whole network. Motifs have been found to have important biological meaning in food webs \parencite{Bascompte2005a} but remain to be identified for single-trophic and bipartite networks. 
 
+     \paragraph{} [Moved over from Chapter 4]
+ Another approach to understanding diversity-maintenance comes from network theory, which represents an ecological community as a network of nodes or species with their interactions forming the links. This framework can include many species as well as multiple interaction types, and can be summarised by a suite of properties which describe how these species and interactions are organised. Because network theory can be used to characterise diversity, stability and other community-level properties emerging from species interactions, it has had a long and meaningful impact on our understanding of ecological communities. That said, this framework predominantly focuses on trophic webs (food web) and plant-pollinator or parasite-host systems (e.g. \cite{Lafferty2008, Thompson2012, Dunne2013, Stouffer2014, Cirtwill2015a}), with fewer methods developed for analysing the properties of horizontal communities like those of annual plant communities. Using network theory to understanding diversity-maintenance in these plant systems nonetheless presents a challenging but exciting opportunity to  integrate multi-trophic and horizontal approaches to understanding multispecies coexistence // the reality of species interactions and their dynamic effects on biodiversity and stability. [modify this paragraph to suit CH 3]
 
 
     % \subsection{Future research directions}
